fixed resize UIs invisible for  images fixed some pages remain when closing a file
Please enter the commit message for your changes. Lines starting

--- a/bin/css/front-end.css
+++ b/bin/css/front-end.css
@@ -16,6 +16,6 @@ body{
 .editable-style{
 	position: absolute;
 }
-.editable-style [data-silex-sub-type="image"]{
-	overflow: hidden;
+.editable-style [data-silex-sub-type="image"] img{
+	border-radius: inherit;
 }
